--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,11 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+plugins {
+    id 'com.android.application' version '7.3.1' apply false
+    id 'com.android.library' version '7.3.1' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
+    id 'org.jetbrains.kotlin.jvm' version '1.8.10' apply false
+}
+
 ext {
     /**
      * 하나의 예시로, extension-android 에서 extension-standard 를 임포트하고 싶으면
@@ -16,3 +24,4 @@ ext {
         }
     }
 }
+
