--- a/myscript-iink/build.gradle
+++ b/myscript-iink/build.gradle
@@ -36,7 +36,7 @@ android {
 
 dependencies {
     implementation project("${getImplementationPrefix(project.parent.name)}:extension-standard")
-    implementation project("${getImplementationPrefix(project.parent.name)}:myscript-iink:UIReferenceImplementation")
+    api project("${getImplementationPrefix(project.parent.name)}:myscript-iink:UIReferenceImplementation")
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
