--- a/myscript-iink/build.gradle
+++ b/myscript-iink/build.gradle
@@ -35,6 +35,7 @@ android {
 }
 
 dependencies {
+    implementation project("${getImplementationPrefix(project.parent.name)}:extension-android")
     implementation project("${getImplementationPrefix(project.parent.name)}:extension-standard")
     api project("${getImplementationPrefix(project.parent.name)}:myscript-iink:UIReferenceImplementation")
     implementation 'androidx.core:core-ktx:1.8.0'
