New: Github Action yml 파일 오타 수정

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
           COLOR="warning"
         fi
 
-        BUILD_URL="https://github.com/${{ github.repository }}/actions/runs/${{ github.run-id }}"
+        BUILD_URL="https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
         
         curl -X POST -H 'Content-type: application/json' --data \
         '{
